# HttpServer

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  index.html  main.cpp
HTTP/: Base.hpp  EnumToString.cpp  HTTPEscapedString.cpp  HTTPEscapedString.hpp  HTTPHeaders.cpp  HTTPHeaders.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  HTTPResponseHead.cpp  HTTPResponseHead.hpp
Handler/: GETHandler.cpp  GETHandler.hpp  IHTTPHandler.hpp  POSTHandler.cpp  POSTHandler.hpp
Handler/Base/: CMakeLists.txt  GetHandler.cpp  GetHandler.hpp  PlainText.cpp  PlainText.hpp  PostHandler.cpp  PostHandler.hpp
Handler/Servlet/: CMakeLists.txt  NodeJS.cpp  NodeJS.hpp
HttpParser_Core/: CMakeLists.txt
HttpParser_Core/include/: HttpParser_Core.hpp  constants.hpp
HttpParser_Core/include/HTTP/: Base.hpp  HTTPEscapedString.hpp  HTTPHeaders.hpp  HTTPRequest.hpp  HTTPResponse.hpp  HTTPResponseCodes.hpp  HTTPResponseHead.hpp
HttpParser_Core/include/Utils/: Foundation.hpp
HttpParser_Core/include/Utils/Foundation/: Exceptions.hpp  File.hpp  LifeManagement.hpp  Plugin.hpp  PosixCall.hpp  StreamIOHelper.hpp  StringStream.hpp  Types.hpp
HttpParser_Core/include/Utils/Foundation/Exceptions/: Exception.hpp  ExitException.hpp
HttpParser_Core/include/Utils/Foundation/LifeManagement/: ArgumentParser.hpp  Daemon.hpp
HttpParser_Core/include/Utils/Foundation/Plugin/: IHTTPHandler.hpp  IPlugin.hpp  PluginManager.hpp  Site.hpp
HttpParser_Core/include/Utils/SocketIO/: ServerSocket.hpp  Socket.hpp  SocketBuffer.hpp
HttpParser_Core/include/Utils/Thread/: ITask.hpp  Thread.hpp
HttpParser_Core/src/HTTP/: EnumToString.cpp  HTTPEscapedString.cpp  HTTPHeaders.cpp  HTTPRequest.cpp  HTTPResponse.cpp  HTTPResponseCodes.cpp  HTTPResponseHead.cpp
HttpParser_Core/src/Utils/Foundation/: File.cpp  MIMETypes.cpp  StreamIOHelper.cpp  StringStream.cpp  pipe_exec.cpp
HttpParser_Core/src/Utils/Foundation/Exceptions/: Exception.cpp  ExitException.cpp
HttpParser_Core/src/Utils/Foundation/LifeManagement/: ArgumentParser.cpp  Daemon.cpp
HttpParser_Core/src/Utils/Foundation/Plugin/: IPlugin.cpp  PluginManager.cpp
HttpParser_Core/src/Utils/SocketIO/: ServerSocket.cpp  Socket.cpp  SocketBuffer.cpp
HttpParser_Core/src/Utils/Thread/: Thread.cpp
Static/: CommandLineOutput.hpp  ConfigTemplate.json  HTTPResponseCodes.cpp  HTTPResponseCodes.hpp  MIMETypes.cpp  MIMETypes.hpp
Test/: CMakeLists.txt  main.cpp
src/: Application.cpp  Application.h  Configurations.cpp  Configurations.hpp  RequestHandler.cpp  marco_definitions.hpp
utils/: Exception.cpp  Exception.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp
utils/Foundation/: BasicIO.hpp  File.cpp  File.hpp  Serializable.hpp  StreamIOHelper.cpp  StreamIOHelper.hpp  StringStream.cpp
utils/Foundation/Exceptions/: Exception.cpp  ExitException.cpp  ExitException.hpp
utils/Foundation/LifeManagement/: ArgumentParser.cpp  Daemon.cpp  Daemon.hpp
utils/Foundation/Plugin/: IPlugin.cpp  IPlugin.hpp  PluginManager.cpp  PluginManager.hpp
utils/SocketIO/: ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  SocketBuffer.cpp  SocketBuffer.hpp
utils/multi-threading/: ITask.hpp  Thread.cpp  Thread.hpp
